fix spacing

--- a/benefits-tool/src/app/relias-benefits/relias-benefits.component.scss
+++ b/benefits-tool/src/app/relias-benefits/relias-benefits.component.scss
@@ -44,3 +44,7 @@
 .slider {
     width: 80%;
 }
+
+.mat-expansion-panel:last-of-type {
+    margin-bottom: 0;
+}
